# shadow-compute

./: Cargo.toml  README.md  deploy.sh
pylibs/: shadow-compute.py
src/: gpu.rs  lib.rs  shader.wgsl
