[package]
name = "shadow-compute"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
bincode = "1.3"
anyhow = "1.0"
wgpu = "0.20"
env_logger = "0.11"
bytemuck = {version = "1", features =["derive"]}
rayon = "1.10"
turbojpeg = "1.0"
memmap2 = "0.9"
